update page fetch routile

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>PageFeed</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="container">
+  <div class="container" style="max-width: 600px;">
     <h1 class="page-header">PageFeed <small>RSS Feed for Facebook Page</small></h1>
     
     <form action="/rss" method="get">
@@ -17,7 +16,6 @@
       </div>
       <button type="submit" class="btn btn-primary">Get RSS Feed</button>
     </form>
-
   </div> <!-- /container -->
 </body>
 </html>
