--- a/views/index.erb
+++ b/views/index.erb
@@ -3,11 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>PageFeed</title>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta name="description" content="Convert any Facebook Page Posts to RSS Feed">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="//bootswatch.com/superhero/bootstrap.css">
 </head>
 <body>
   <div class="container" style="max-width: 600px;">
-    <h1 class="page-header">PageFeed <small>RSS Feed for Facebook Page</small></h1>
+    <h1 class="page-header">PageFeed <small>Get RSS Feed for Facebook Page</small></h1>
     
     <form action="/rss" method="get">
       <div class="form-group">
