updates fetch logic

--- a/views/index.erb
+++ b/views/index.erb
@@ -10,7 +10,6 @@
 <body>
   <div class="container" style="max-width: 600px;">
     <h1 class="page-header">PageFeed <small>Get RSS Feed for Facebook Page</small></h1>
-    
     <form action="/rss" method="get">
       <div class="form-group">
         <label for="pageId">Page ID</label>
@@ -18,6 +17,10 @@
       </div>
       <button type="submit" class="btn btn-primary">Get RSS Feed</button>
     </form>
+    <hr>
+    <footer>
+      <p>By <a href="http://www.usefulparadigm.com/">Useful Paradigm</a></p>
+    </footer>  
   </div> <!-- /container -->
 </body>
 </html>
