--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container" style="max-width: 600px;">
-    <h1 class="page-header">PageFeed <small>Get RSS Feed for Facebook Page</small></h1>
+    <h1 class="page-header">PageFeed <small>Get RSS Feed of a Facebook Page</small></h1>
     <form action="/rss" method="get">
       <div class="form-group">
         <label for="pageId">Page ID</label>
