change input value from page_id to page_url

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,8 +12,8 @@
     <h1 class="page-header">PageFeed <small>Get RSS Feed of a Facebook Page</small></h1>
     <form action="/rss" method="get">
       <div class="form-group">
-        <label for="pageId">Page ID</label>
-        <input type="text" name="page_id" class="form-control" id="pageId" placeholder="Facebook Page ID">
+        <label for="pageUrl">Page URL</label>
+        <input type="text" name="page_url" class="form-control" id="pageUrl" placeholder="https://www.facebook.com/PAGE_ID">
       </div>
       <button type="submit" class="btn btn-primary">Get RSS Feed</button>
     </form>
