--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
   <title>PageFeed</title>
   <meta name="description" content="Convert any Facebook Page Posts to RSS Feed">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="//bootswatch.com/superhero/bootstrap.css">
+  <link rel="stylesheet" href="//bootswatch.com/3/superhero/bootstrap.min.css">
 </head>
 <body>
   <div class="container" style="max-width: 600px;">
